--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,4 +10,4 @@
 			%center
 				Todos los derechos reservados 2014. Desarrollado por 
 				%b{style:"color:#57DFA9;"}
-					SigmaRails
+					SigmaOnRails
