--- a/app/views/user/index.html.haml
+++ b/app/views/user/index.html.haml
@@ -9,7 +9,7 @@
 				.row
 					.col-md-6.col-sm-6.col-xs-6{style:"padding-right: 0px;"}
 						%center
-							= link_to "<i class='fa fa-home fa-3x'></i>".html_safe, root_path, :class=>"btn btn-control"
+							= link_to "<i class='fa fa-list-alt fa-3x'></i>".html_safe, config_path, :class=>"btn btn-control"
 					.col-md-6.col-sm-6.col-xs-6{style:"padding-left: 0px;border-left:1px solid #c0c0c0;"}
 						%center
 							= link_to "<i class='fa fa-plus fa-3x'></i>".html_safe, new_user_path, :class=>"btn btn-control"
