--- a/app/assets/stylesheets/empresas.css.scss
+++ b/app/assets/stylesheets/empresas.css.scss
@@ -47,3 +47,17 @@
 	padding: 5px;
 	width: 100%;
 }
+
+.footer-control{
+	background-color: #E9E9E9;
+	padding: 10px;
+	box-shadow: 0px 2px 1px #c0c0c0;
+}
+
+.show-table{
+	width: 100%;
+}
+
+.show-table td{
+	padding: 10px;
+}
