--- a/app/views/home/conf.html.haml
+++ b/app/views/home/conf.html.haml
@@ -30,3 +30,7 @@
 							%h3 Historial
 
 		.modal-footer.footer-login
+			%center
+				Todos los derechos reservados 2014. Desarrollado por 
+				%b{style:"color:#57DFA9;"}
+					SigmaOnRails
