tipo de equipos

--- a/app/views/empresas/edit.html.haml
+++ b/app/views/empresas/edit.html.haml
@@ -15,9 +15,9 @@
 			.container-login#user-container
 				.modal-header.title-login
 					%h2.hidden-xs
-						%i.fa.fa-user
+						%i.fa.fa-puzzle-piece
 						Editar Empresa Cliente
 					%h2.visible-xs 
-						%i.fa.fa-user
+						%i.fa.fa-puzzle-piece
 						Editar Cliente
 				= render 'form'
