--- a/app/views/home/conf.html.haml
+++ b/app/views/home/conf.html.haml
@@ -11,7 +11,7 @@
 							%i.fa.fa-user.fa-5x
 							%h3 Usuarios
 			.col-lg-3.col-mg-3.col-sm-3.col-xs-6.col-conf#conf-uno
-				%a.link_conf{href: "/user"}
+				%a.link_conf{href: "/equipos"}
 					.section-conf
 						%center
 							%i.fa.fa-puzzle-piece.fa-5x
